package com.utaste.app.admin;

public class ManageWaitersService {
}

