package com.utaste.domain.recipe;

public class Recipe {
}
